--- a/assets/client/css/custom.css
+++ b/assets/client/css/custom.css
@@ -77,6 +77,7 @@ a.my-thumbnail > img {
 .m-b-15 {
     margin-bottom: 15px !important;
 }
+
 .m-t-15 {
     margin-top: 15px !important;
 }
@@ -100,4 +101,8 @@ ul.store-pages li.active {
 
 .response {
     margin-top: 30px;
+}
+
+table.valign-middle td {
+    vertical-align: middle !important;
 }
