--- a/assets/client/css/custom.css
+++ b/assets/client/css/custom.css
@@ -106,3 +106,11 @@ ul.store-pages li.active {
 table.valign-middle td {
     vertical-align: middle !important;
 }
+
+.ads {
+    width: 100%;
+}
+
+.ads img {
+    width: 100%;
+}
