--- a/assets/client/css/custom.css
+++ b/assets/client/css/custom.css
@@ -34,7 +34,13 @@ h3.title-head {
 }
 
 .articles {
-    margin-top: 3em;
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
+
+.article {
+    margin: 1.5em 0 0 0;
+    padding-bottom: 1.5em;
 }
 
 h3 {
