--- a/assets/client/css/custom.css
+++ b/assets/client/css/custom.css
@@ -154,3 +154,17 @@ table.valign-middle td {
     right: 0;
     bottom: -20px;
 }
+
+.theme-button {
+    background: #84754e;
+    border: 1px solid #f4f4f4;
+    width: 100%;
+    color: #fff;
+    letter-spacing: 0.5px;
+    outline: none;
+    transition: .5s all;
+    -webkit-transition: .5s all;
+    -moz-transition: .5s all;
+    -o-transition: .5s all;
+    -ms-transition: .5s all;
+}
